01-basic-web-app/k8s/eregold-backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: eregold-backend
  name: eregold-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: eregold-backend
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.network/eregold-network: "true"
        io.kompose.service: eregold-backend
    spec:
      containers:
        - image: digital-crafting/eregold-be:01-1.0.0
          name: eregold-backend
          ports:
            - containerPort: 8080
          resources: {}
      restartPolicy: Always
status: {}
