01-basic-web-app/k8s/eregold-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: eregold-db
  name: eregold-db
spec:
  ports:
    - name: "2345"
      port: 2345
      targetPort: 5432
  selector:
    io.kompose.service: eregold-db
status:
  loadBalancer: {}
