01-basic-web-app/k8s/eregold-network-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: eregold-network
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/eregold-network: "true"
  podSelector:
    matchLabels:
      io.kompose.network/eregold-network: "true"
